# AI-Provider-Switch-Kit-AI-Coding-Agent-

./: README.md
ai-provider-switch-kit/: pyproject.toml
ai-provider-switch-kit/config/: providers.example.json
ai-provider-switch-kit/docs/: application-description.md  evidence-guide.md
ai-provider-switch-kit/src/aiswitchkit/: cli.py
