[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-provider-switch-kit"
version = "0.1.0"
description = "AI Coding provider switching config toolkit."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.31.0"]

[project.scripts]
aiswitchkit = "aiswitchkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
